--- a/leap1.html
+++ b/leap1.html
@@ -102,25 +102,28 @@
     </div>
   </section>
   <section id="section-6">
-    <video control autoplay muted loop width>
+    <video class="video" control autoplay muted loop width>
       <source src="./6.webm">
-    </video>
-    <div class="desc">
-      <h1>Model Y</h1>
-      <h3>From $32,890*</h3>
-      <p>After Federal Tax Credit & Est. Gas Savings</p> 
-    </div>
-    <div class="content">
-      <div class="btn-container">
-        <button id="btn-white">Shop Available</button>
-        <button id="btn-black">Demo Drive</button>
+      <div class="desc">
+        <div class="absolute">
+        <h1>Model Y</h1>
+        <h3>From $32,890*</h3>
+        <p>After Federal Tax Credit & Est. Gas Savings</p> 
+        </div>
       </div>
-      <span class="color">Price before incentives and savings is $42,990, excluding taxes and
-        fees. Subject to change.
-        <br>
-        <a>Learn about est. gas savings.</a>
-      </span>
-    </div>
+      <div class="content">
+        <div class="btn-container">
+          <button id="btn-white">Shop Available</button>
+          <button id="btn-black">Demo Drive</button>
+        </div>
+        <span class="color">Price before incentives and savings is $42,990, excluding taxes and
+          fees. Subject to change.
+          <br>
+          <a>Learn about est. gas savings.</a>
+        </span>
+      </div>
+
+    </video>
   </section>
   <section id="section-7">
     <div class="desc">
